added static files directory
Signed-off-by: Lyndon Michael Bibera <secret.transaction@gmail.com>

--- a/appengine-try-python-django/app.yaml
+++ b/appengine-try-python-django/app.yaml
@@ -8,6 +8,9 @@ handlers:
 - url: /_ah/spi/.*
   script: endpoint.app_api.APPLICATION
 
+- url: /static
+  static_dir: static
+
 libraries:
 - name: django
   version: 1.5
